--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Responsive</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="https://kit.fontawesome.com/4071550212.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <!-- ------------------ MENÚ LATERAL ------------------ -->
     <nav class="sidebar">
-        <div class="logo">Mi Logo</div>
+        <div class="logo">
+            <i class="fa-regular fa-camera"></i>
+            <div>Mi Logo</div>
+        </div>   
         <div class="menu">
             <a href="#inicio">Inicio</a>
             <a href="#galeria">Galería</a>
@@ -22,12 +26,12 @@
     <div class="content">
 
         <section id="inicio">
-            <div>
-                <h1>Sitio de Imagenes</h1>
-            </div>
-            <div>
-            <p>Disfrute el contenido de imagenes de diversos lugares y origenes</p>
-            </div>
+                <div>
+                    <h1>Sitio de Imagenes</h1>
+                </div>
+                <div>
+                    <p>Disfrute el contenido de imagenes de diversos lugares y origenes</p>
+                </div>
         </section>
 
         <section id="galeria">
