--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h1>Sitio de Imagenes</h1>
                 </div>
                 <div>
-                    <p>Disfrute el contenido de imagenes de diversos lugares y origenes</p>
+                    <h4>Disfrute el contenido de imagenes de diversos lugares y origenes</h4>
                 </div>
         </section>
 
